--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,8 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.7.0; python_version >= '3.8'
-boto3==1.34.19; python_version >= '3.8'
-botocore==1.34.19; python_version >= '3.8'
+boto3==1.34.20; python_version >= '3.8'
+botocore==1.34.20; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.2; python_version >= '3.7'
 certifi==2023.11.17; python_version >= '3.6'
@@ -38,7 +38,7 @@ google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.7.0; python_version >= '3.7'
 googleapis-common-protos==1.62.0; python_version >= '3.7'
-greenlet==3.0.3; python_version >= '3.11' and platform_python_implementation == 'CPython'
+greenlet==3.0.3; python_version < '3.11' and platform_python_implementation == 'CPython'
 holidays==0.23; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.6; python_version >= '3.5'
@@ -106,8 +106,9 @@ zope.interface==6.1; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.0.2; python_version ~= '3.9'
+apache-superset==3.0.3; python_version ~= '3.9'
 apispec[yaml]==6.4.0; python_version >= '3.8'
+async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
@@ -126,6 +127,7 @@ deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1,
 deprecation==2.1.0
 dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
 email-validator==1.3.1; python_version >= '3.5'
+exceptiongroup==1.2.0; python_version < '3.11'
 flask-appbuilder==4.3.10; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.1.0; python_version >= '3.7'
@@ -140,7 +142,7 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 hijri-converter==2.3.1; python_version >= '3.7'
@@ -148,7 +150,7 @@ humanize==4.9.0; python_version >= '3.8'
 importlib-metadata==7.0.1; python_version >= '3.8'
 importlib-resources==6.1.1; python_version >= '3.8'
 isodate==0.6.1
-jsonschema==4.20.0; python_version >= '3.8'
+jsonschema==4.21.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.5; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -169,7 +171,7 @@ pgsanity==0.2.9
 polyline==2.0.1; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
-pyarrow==12.0.1; python_version >= '3.7'
+pyarrow==14.0.2; python_version >= '3.8'
 pygments==2.17.2; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
