--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 -i https://pypi.org/simple
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.0.2; python_version ~= '3.9'
+apache-superset==3.0.3; python_version ~= '3.9'
 apispec[yaml]==6.4.0; python_version >= '3.8'
+async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
@@ -27,6 +28,7 @@ deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1,
 deprecation==2.1.0
 dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
 email-validator==1.3.1; python_version >= '3.5'
+exceptiongroup==1.2.0; python_version < '3.11'
 flask==2.2.5; python_version >= '3.7'
 flask-appbuilder==4.3.10; python_version ~= '3.7'
 flask-babel==2.0.0
@@ -42,7 +44,7 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 hijri-converter==2.3.1; python_version >= '3.7'
@@ -54,7 +56,7 @@ importlib-resources==6.1.1; python_version >= '3.8'
 isodate==0.6.1
 itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.3; python_version >= '3.7'
-jsonschema==4.20.0; python_version >= '3.8'
+jsonschema==4.21.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.5; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -79,7 +81,7 @@ pgsanity==0.2.9
 polyline==2.0.1; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
-pyarrow==12.0.1; python_version >= '3.7'
+pyarrow==14.0.2; python_version >= '3.8'
 pycparser==2.21
 pygments==2.17.2; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
