--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,8 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.7.0; python_version >= '3.8'
-boto3==1.34.20; python_version >= '3.8'
-botocore==1.34.20; python_version >= '3.8'
+boto3==1.34.25; python_version >= '3.8'
+botocore==1.34.25; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.2; python_version >= '3.7'
 certifi==2023.11.17; python_version >= '3.6'
@@ -17,7 +17,7 @@ clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
 cmdstanpy==1.2.0; python_version >= '3.8'
 contourpy==1.2.0; python_version >= '3.9'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cryptography==39.0.2; python_version >= '3.6'
+cryptography==41.0.7; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
@@ -38,7 +38,7 @@ google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.7.0; python_version >= '3.7'
 googleapis-common-protos==1.62.0; python_version >= '3.7'
-greenlet==3.0.3; python_version < '3.11' and platform_python_implementation == 'CPython'
+greenlet==3.0.3; python_version >= '3.7'
 holidays==0.23; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.6; python_version >= '3.5'
@@ -52,7 +52,7 @@ kiwisolver==1.4.5; python_version >= '3.7'
 leb128==1.0.5
 lunarcalendar==0.0.9; python_version >= '2.7' and python_version < '4'
 lz4==4.3.3; python_version >= '3.8'
-markupsafe==2.1.3; python_version >= '3.7'
+markupsafe==2.1.4; python_version >= '3.7'
 matplotlib==3.8.2; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
@@ -60,8 +60,8 @@ oauth2==1.9.0.post1
 oauthlib==2.1.0
 openpyxl==3.1.2; python_version >= '3.6'
 packaging==23.2; python_version >= '3.7'
-pandas==1.5.3; python_version >= '3.8'
-pillow==10.0.1; python_version >= '3.8'
+pandas[performance]==2.0.3; python_version >= '3.8'
+pillow==10.1.0; python_version >= '3.8'
 prophet==1.1.1; python_version >= '3.7'
 protobuf==4.25.2; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
@@ -92,7 +92,7 @@ sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.3.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
-thrift==0.16.0
+thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
 tqdm==4.66.1; python_version >= '3.7'
 trino[sqlalchemy]==0.327.0; python_version >= '3.7'
@@ -106,15 +106,18 @@ zope.interface==6.1; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.0.3; python_version ~= '3.9'
+apache-superset==3.1.0; python_version ~= '3.9'
 apispec[yaml]==6.4.0; python_version >= '3.8'
+apsw==3.45.0.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.1.2; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
+bottleneck==1.3.7
 brotli==1.1.0; platform_python_implementation != 'PyPy'
+cattrs==23.2.3; python_version >= '3.8'
 celery==5.3.6; python_version >= '3.8'
 click-didyoumean==0.3.0; python_full_version >= '3.6.2' and python_full_version < '4.0.0'
 click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
@@ -125,7 +128,7 @@ cron-descriptor==1.4.0
 croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
-dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
+dnspython==2.5.0; python_version >= '3.8'
 email-validator==1.3.1; python_version >= '3.5'
 exceptiongroup==1.2.0; python_version < '3.11'
 flask-appbuilder==4.3.10; python_version ~= '3.7'
@@ -136,6 +139,7 @@ flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
 flask-limiter==3.5.0; python_version >= '3.7'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
+flask-session==0.6.0; python_version >= '3.7'
 flask-sqlalchemy==2.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 flask-talisman==1.1.0
 flask-wtf==1.2.1; python_version >= '3.8'
@@ -150,12 +154,13 @@ humanize==4.9.0; python_version >= '3.8'
 importlib-metadata==7.0.1; python_version >= '3.8'
 importlib-resources==6.1.1; python_version >= '3.8'
 isodate==0.6.1
-jsonschema==4.21.0; python_version >= '3.8'
+jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.5; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
 limits==3.7.0; python_version >= '3.7'
-mako==1.3.0; python_version >= '3.8'
+llvmlite==0.41.1; python_version >= '3.8'
+mako==1.3.1; python_version >= '3.8'
 markdown==3.5.2; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 marshmallow==3.20.2; python_version >= '3.8'
@@ -163,11 +168,14 @@ marshmallow-sqlalchemy==0.26.1; python_version >= '3.6'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.15
+numba==0.58.1
+numexpr==2.8.8
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
+platformdirs==4.1.0; python_version >= '3.8'
 polyline==2.0.1; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
@@ -176,14 +184,16 @@ pygments==2.17.2; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
 pysocks==1.7.1
-python-dotenv==1.0.0; python_version >= '3.8'
+python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.32.1; python_version >= '3.8'
+requests-cache==1.1.1; python_version >= '3.7' and python_version < '4.0'
 rich==13.7.0; python_full_version >= '3.7.0'
 rpds-py==0.17.1; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
+shillelagh==1.2.14; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 slack-sdk==3.26.2; python_version >= '3.6'
@@ -196,6 +206,7 @@ tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3
 trio==0.24.0; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
 typing-extensions==4.9.0; python_version >= '3.8'
+url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
 wrapt==1.16.0; python_version >= '3.6'
