--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,18 +3,18 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.7.0; python_version >= '3.8'
-boto3==1.34.25; python_version >= '3.8'
-botocore==1.34.25; python_version >= '3.8'
+boto3==1.34.45; python_version >= '3.8'
+botocore==1.34.45; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.2; python_version >= '3.7'
-certifi==2023.11.17; python_version >= '3.6'
+certifi==2024.2.2; python_version >= '3.6'
 cffi==1.16.0; python_version >= '3.8'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 ciso8601==2.3.1
 click==8.1.7; python_version >= '3.7'
-clickhouse-driver==0.2.6; python_version >= '3.7' and python_version < '4'
+clickhouse-driver==0.2.7; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
-cmdstanpy==1.2.0; python_version >= '3.8'
+cmdstanpy==1.2.1; python_version >= '3.8'
 contourpy==1.2.0; python_version >= '3.9'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
 cryptography==41.0.7; python_version >= '3.7'
@@ -22,24 +22,24 @@ cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
 et-xmlfile==1.1.0; python_version >= '3.6'
-flask==2.2.5; python_version >= '3.7'
+flask==2.3.3; python_version >= '3.8'
 flask-cors==4.0.0
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
-fonttools==4.47.2; python_version >= '3.8'
-fsspec==2023.12.2; python_version >= '3.8'
+fonttools==4.49.0; python_version >= '3.8'
+fsspec==2024.2.0; python_version >= '3.8'
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core==2.15.0; python_version >= '3.7'
-google-auth==2.26.2; python_version >= '3.7'
-google-cloud-bigquery==3.16.0; python_version >= '3.7'
+google-api-core==2.17.1; python_version >= '3.7'
+google-auth==2.28.0; python_version >= '3.7'
+google-cloud-bigquery==3.17.2; python_version >= '3.7'
 google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.7.0; python_version >= '3.7'
 googleapis-common-protos==1.62.0; python_version >= '3.7'
 greenlet==3.0.3; python_version >= '3.7'
-holidays==0.23; python_version >= '3.7'
+holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.6; python_version >= '3.5'
 impyla==0.18.0
@@ -52,8 +52,8 @@ kiwisolver==1.4.5; python_version >= '3.7'
 leb128==1.0.5
 lunarcalendar==0.0.9; python_version >= '2.7' and python_version < '4'
 lz4==4.3.3; python_version >= '3.8'
-markupsafe==2.1.4; python_version >= '3.7'
-matplotlib==3.8.2; python_version >= '3.9'
+markupsafe==2.1.5; python_version >= '3.7'
+matplotlib==3.8.3; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
 oauth2==1.9.0.post1
@@ -63,7 +63,7 @@ packaging==23.2; python_version >= '3.7'
 pandas[performance]==2.0.3; python_version >= '3.8'
 pillow==10.2.0; python_version >= '3.8'
 prophet==1.1.1; python_version >= '3.7'
-protobuf==4.25.2; python_version >= '3.8'
+protobuf==4.25.3; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
 pure-sasl==0.6.2
 pyasn1==0.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -77,13 +77,13 @@ pymeeus==0.5.12
 pyparsing==3.1.1; python_full_version >= '3.6.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-ldap==3.4.4; python_version >= '3.6'
-pytz==2023.3.post1
+pytz==2024.1
 requests==2.31.0; python_version >= '3.7'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 s3transfer==0.10.0; python_version >= '3.8'
 sasl==0.3.1
-setuptools==69.0.3; python_version >= '3.8'
+setuptools==69.1.0; python_version >= '3.8'
 setuptools-git==1.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.51; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -94,21 +94,21 @@ stanio==0.3.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
-tqdm==4.66.1; python_version >= '3.7'
-trino[sqlalchemy]==0.327.0; python_version >= '3.7'
-tzdata==2023.4; python_version >= '2'
+tqdm==4.66.2; python_version >= '3.7'
+trino[sqlalchemy]==0.328.0; python_version >= '3.8'
+tzdata==2024.1; python_version >= '2'
 tzlocal==5.2; python_version >= '3.8'
 urllib3[socks]==2.0.7; python_version >= '3.7'
 werkzeug==2.3.8; python_version >= '3.8'
 wheel==0.42.0; python_version >= '3.7'
 zope.event==5.0; python_version >= '3.7'
-zope.interface==6.1; python_version >= '3.7'
+zope.interface==6.2; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.1.0; python_version ~= '3.9'
+apache-superset==3.1.1; python_version ~= '3.9'
 apispec[yaml]==6.4.0; python_version >= '3.8'
-apsw==3.45.0.0; python_version >= '3.8'
+apsw==3.45.1.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
@@ -124,19 +124,19 @@ click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-cron-descriptor==1.4.0
+cron-descriptor==1.4.3
 croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
-dnspython==2.5.0; python_version >= '3.8'
-email-validator==1.3.1; python_version >= '3.5'
+dnspython==2.6.1; python_version >= '3.8'
+email-validator==2.1.0.post1; python_version >= '3.8'
 exceptiongroup==1.2.0; python_version < '3.11'
-flask-appbuilder==4.3.10; python_version ~= '3.7'
+flask-appbuilder==4.4.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.1.0; python_version >= '3.7'
 flask-compress==1.14
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.5.0; python_version >= '3.7'
+flask-limiter==3.5.1; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.6.0; python_version >= '3.7'
@@ -149,7 +149,6 @@ geopy==2.4.1; python_version >= '3.7'
 gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
-hijri-converter==2.3.1; python_version >= '3.7'
 humanize==4.9.0; python_version >= '3.8'
 importlib-metadata==7.0.1; python_version >= '3.8'
 importlib-resources==6.1.1; python_version >= '3.8'
@@ -158,25 +157,25 @@ jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.5; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.7.0; python_version >= '3.7'
-llvmlite==0.41.1; python_version >= '3.8'
-mako==1.3.1; python_version >= '3.8'
+limits==3.9.0; python_version >= '3.7'
+llvmlite==0.42.0; python_version >= '3.9'
+mako==1.3.2; python_version >= '3.8'
 markdown==3.5.2; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 marshmallow==3.20.2; python_version >= '3.8'
-marshmallow-sqlalchemy==0.26.1; python_version >= '3.6'
+marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.15
-numba==0.58.1
-numexpr==2.8.8
+numba==0.59.0
+numexpr==2.9.0
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.1.0; python_version >= '3.8'
-polyline==2.0.1; python_version >= '3.7'
+platformdirs==4.2.0; python_version >= '3.8'
+polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
 pyarrow==14.0.2; python_version >= '3.8'
@@ -188,18 +187,19 @@ python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.32.1; python_version >= '3.8'
-requests-cache==1.1.1; python_version >= '3.7' and python_version < '4.0'
+referencing==0.33.0; python_version >= '3.8'
+requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.0; python_full_version >= '3.7.0'
-rpds-py==0.17.1; python_version >= '3.8'
+rpds-py==0.18.0; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh==1.2.14; python_version >= '3.8'
+shillelagh==1.2.15; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.26.2; python_version >= '3.6'
+slack-sdk==3.27.0; python_version >= '3.6'
 sniffio==1.3.0; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
+sqlglot==20.11.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
