--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 -i https://pypi.org/simple
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.1.0; python_version ~= '3.9'
+apache-superset==3.1.1; python_version ~= '3.9'
 apispec[yaml]==6.4.0; python_version >= '3.8'
-apsw==3.45.0.0; python_version >= '3.8'
+apsw==3.45.1.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.1.2; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
+blinker==1.7.0; python_version >= '3.8'
 bottleneck==1.3.7
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cachelib==0.9.0; python_version >= '3.7'
 cattrs==23.2.3; python_version >= '3.8'
 celery==5.3.6; python_version >= '3.8'
-certifi==2023.11.17; python_version >= '3.6'
+certifi==2024.2.2; python_version >= '3.6'
 cffi==1.16.0; python_version >= '3.8'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
@@ -24,22 +25,21 @@ click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cron-descriptor==1.4.0
+cron-descriptor==1.4.3
 croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cryptography==41.0.7; python_version >= '3.7'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
-dnspython==2.5.0; python_version >= '3.8'
-email-validator==1.3.1; python_version >= '3.5'
+dnspython==2.6.1; python_version >= '3.8'
+email-validator==2.1.0.post1; python_version >= '3.8'
 exceptiongroup==1.2.0; python_version < '3.11'
-flask==2.2.5; python_version >= '3.7'
-flask-appbuilder==4.3.10; python_version ~= '3.7'
+flask==2.3.3; python_version >= '3.8'
+flask-appbuilder==4.4.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.1.0; python_version >= '3.7'
 flask-compress==1.14
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.5.0; python_version >= '3.7'
+flask-limiter==3.5.1; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.6.0; python_version >= '3.7'
@@ -53,8 +53,7 @@ greenlet==3.0.3; python_version >= '3.7'
 gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
-hijri-converter==2.3.1; python_version >= '3.7'
-holidays==0.23; python_version >= '3.7'
+holidays==0.25; python_version >= '3.7'
 humanize==4.9.0; python_version >= '3.8'
 idna==3.6; python_version >= '3.5'
 importlib-metadata==7.0.1; python_version >= '3.8'
@@ -66,19 +65,19 @@ jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.5; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.7.0; python_version >= '3.7'
-llvmlite==0.41.1; python_version >= '3.8'
-mako==1.3.1; python_version >= '3.8'
+limits==3.9.0; python_version >= '3.7'
+llvmlite==0.42.0; python_version >= '3.9'
+mako==1.3.2; python_version >= '3.8'
 markdown==3.5.2; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-markupsafe==2.1.4; python_version >= '3.7'
+markupsafe==2.1.5; python_version >= '3.7'
 marshmallow==3.20.2; python_version >= '3.8'
-marshmallow-sqlalchemy==0.26.1; python_version >= '3.6'
+marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.15
-numba==0.58.1
-numexpr==2.8.8
+numba==0.59.0
+numexpr==2.9.0
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
@@ -87,46 +86,46 @@ pandas[performance]==2.0.3; python_version >= '3.8'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.1.0; python_version >= '3.8'
-polyline==2.0.1; python_version >= '3.7'
+platformdirs==4.2.0; python_version >= '3.8'
+polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
 pyarrow==14.0.2; python_version >= '3.8'
 pycparser==2.21
 pygments==2.17.2; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
-pymeeus==0.5.12
 pynacl==1.5.0; python_version >= '3.6'
 pyparsing==3.1.1; python_full_version >= '3.6.8'
 pysocks==1.7.1
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
-pytz==2023.3.post1
+pytz==2024.1
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.32.1; python_version >= '3.8'
+referencing==0.33.0; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
-requests-cache==1.1.1; python_version >= '3.7' and python_version < '4.0'
+requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.0; python_full_version >= '3.7.0'
-rpds-py==0.17.1; python_version >= '3.8'
+rpds-py==0.18.0; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh==1.2.14; python_version >= '3.8'
+shillelagh==1.2.15; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.26.2; python_version >= '3.6'
+slack-sdk==3.27.0; python_version >= '3.6'
 sniffio==1.3.0; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.51; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
+sqlglot==20.11.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 trio==0.24.0; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
 typing-extensions==4.9.0; python_version >= '3.8'
-tzdata==2023.4; python_version >= '2'
+tzdata==2024.1; python_version >= '2'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 urllib3[socks]==2.0.7; python_version >= '3.7'
 vine==5.1.0; python_version >= '3.6'
